Bug 1235821 - Don't track mouseleave when capturing mousei. r=jimm, a=ritu Since, in Windows, the tabbar overlays the "nonclient" area, TrackMouseEvent will report a WM_MOUSELEAVE when you move your mouse when dragging a tab.

So, suspend mouseleave tracking when capturing and resume when we end capture.

A nice effect of TrackMouseEvent is that it'll immediately post a WM_MOUSELEAVE
if called when the mouse is outside the client area, so when capture ends, we
are either over the client area and tracking resumes or we aren't and we get
an immediate WM_MOUSELEAVE.